xterm (255-1) UNRELEASED; urgency=low

  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Add build-dep on libxkbfile-dev for XkbBell(3).
  * Remove myself from Uploaders
  * New upstream release
    + correct logic used to switch to alternate screen using FIFO-lines
      configuration (closes: #565772)

 -- Julien Cristau <jcristau@debian.org>  Tue, 02 Mar 2010 14:18:33 +0100

xterm (253-1) unstable; urgency=low

  * New upstream release
    + parenthesize expression in MoreRows macro, fixing a limit check added in
      patch #251 (closes: #560039)
  * Update debian/copyright.
  * Add dependency on ${misc:Depends} (lintian).
  * Refresh patches 900_debian_xterm.diff and 901_xterm_manpage.diff.

 -- Julien Cristau <jcristau@debian.org>  Tue, 29 Dec 2009 12:31:52 +0000

xterm (251-1) unstable; urgency=low

  * New upstream release.
  * Update copy of XTerm FAQ to revision 1.107 (dated 2009/11/11).
  * Upstream introduced a new 'disallowedWindowOps' resource to fine-tune
    which operations are affected by the 'allowWindowOps' setting.  After
    discussion with the security team, change the default for the new resource
    to include all operations.

 -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 14:46:51 +0100

xterm (250-1) unstable; urgency=low

  * New upstream release
    + add check and error-message for fonts that have no printable values in
      the ISO-8859-1 range (closes: #542434)
    + limit minimum cell-width for packed font to maximum-advance
      reported by Xft.  Some fonts are wider than that, even in the Latin-1
      range (closes: #550497)
    + correct off-by-one in okPosition fix from patch #249 limit-checks which
      prevented double-click selection on the bottom line of the screen
      (closes: #550368)
    + document in xterm manpage the limited availability of resources color16
      to color255 as noted in patch #188 (LP: #438850)
