@@ -2,7 +2,7 @@ Index: xterm/xterm.man
 ===================================================================
 --- xterm.orig/xterm.man
 +++ xterm/xterm.man
-@@ -2004,8 +2004,9 @@
+@@ -2070,8 +2070,9 @@
  from \fIdtterm\fP the operation number).
  The default value is
  .RS
